Closed Bug 1542594 Opened 5 years ago Closed 5 years ago

Apply counter-set after counter-increment, not before

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

Attachments

(1 file)

Pushed by mpalmgren@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5b174e219346
Apply counter-set after counter-increment, not before.  r=emilio
Flags: in-testsuite+
Target Milestone: mozilla67 → mozilla68
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Blocks: 1543249
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/16624 for changes under testing/web-platform/tests
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: