Bug 1542594 - Apply counter-set after counter-increment, not before.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D26439

--HG--
extra : rebase_source : 5e95ba52fda0b4b30865d7e98b9f49178f620cd6